--- a/ITT 205 Problem Solving using Python/Module 2/Lists.ipynb
+++ b/ITT 205 Problem Solving using Python/Module 2/Lists.ipynb
@@ -2428,9 +2428,191 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-PiwAgUCdaA8",
+        "colab_type": "text"
+      },
+      "source": [
+        "#List from Range"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "y13Ynxt7ZzPN",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b1b664be-9293-4539-e5b4-4149d357ff0b"
+      },
+      "source": [
+        "nums = [range(1, 1000001)]\n",
+        "len(nums)"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iJs-xnvceWLF",
+        "colab_type": "text"
+      },
+      "source": [
+        "We can use argument-unpacking operator *"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dOQ3Wknsdf34",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "caca3a69-6368-4021-af9e-2e2e0657a151"
+      },
+      "source": [
+        "nums = [*range(1, 1000001)]\n",
+        "len(nums)"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1000000"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gs8o5IcWeXzU",
+        "colab_type": "text"
+      },
+      "source": [
+        "We can use the extend() function to unpack the result of range function"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9NH6SJLXeR_W",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "10f44a8f-3324-4876-eca0-c2dc6b8643a5"
+      },
+      "source": [
+        "list = [] \n",
+        "list.extend(range(1, 1000001)) \n",
+        "len(list) \n"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1000000"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TQ87weNFfAVm",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Popping elements"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G6HGMN6tfGNq",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "colors =['red','blue','green']"
+      ],
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kXlAIyBXe0hr",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "cc4f4f25-dd07-4b69-b73e-b3e0fdb3b62b"
+      },
+      "source": [
+        "# Pop the last item from a list\n",
+        "color = colors.pop()\n",
+        "print(color)\n",
+        "print(colors)\n",
+        "# Pop the first item in a list\n",
+        "color = colors.pop(0)\n",
+        "print(color)\n",
+        "print(colors)\n"
+      ],
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "green\n",
+            "['red', 'blue']\n",
+            "red\n",
+            "['blue']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KLnln5i1glbR",
         "colab_type": "code",
         "colab": {}
       },
