--- a/ITT 205 Problem Solving using Python/Module 2/dictionaries.ipynb
+++ b/ITT 205 Problem Solving using Python/Module 2/dictionaries.ipynb
@@ -1093,6 +1093,162 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "L1815pmPZY5-"
+      },
+      "source": [
+        "#Exercise"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "h4HUl_aDaNrY"
+      },
+      "source": [
+        "If you played around with the fibonacci function , you might\n",
+        "have noticed that the bigger the argument you provide, the longer the function\n",
+        "takes to run. Furthermore, the run time increases very quickly. On one of\n",
+        "our machines, fibonacci(20) finishes instantly, fibonacci(30) takes about a\n",
+        "second, and fibonacci(40) takes roughly forever"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WULI1618ahwY",
+        "outputId": "042f4223-6c38-4cd4-f22c-8a566eaea9a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        }
+      },
+      "source": [
+        "import time\n",
+        "def fib(n):\n",
+        "   if n <= 1:\n",
+        "       return n\n",
+        "   else:\n",
+        "       return(fib(n-1) + fib(n-2))\n",
+        "n=int(input(\"Enter the value of n:\"))\n",
+        "start_time = time.time()\n",
+        "print(\"Fibonacci(\", n,\")= \", fib(n))\n",
+        "print(\"Time:% \",(time.time() - start_time))"
+      ],
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter the value of n:40\n",
+            "Fibonacci( 40 )=  102334155\n",
+            "Time:%  33.857834815979004\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pBq4LeeHbjVl"
+      },
+      "source": [
+        "Note the running time\n",
+        "[Call graph](https://github.com/sarithdm/python/blob/master/ITT%20205%20Problem%20Solving%20using%20Python/Module%202/cg.png)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8CpuspHFfPGm"
+      },
+      "source": [
+        "A call graph shows a set function frames, with lines connecting each frame to\n",
+        "the frames of the functions it calls. At the top of the graph, fibonacci with\n",
+        "n=4 calls fibonacci with n=3 and n=2. In turn, fibonacci with n=3 calls\n",
+        "fibonacci with n=2 and n=1. And so on."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FKSus9zhfSS4"
+      },
+      "source": [
+        "Count how many times fibonacci(0) and fibonacci(1) are called. This is an\n",
+        "ine\u000ecient solution to the problem, and it gets far worse as the argument gets\n",
+        "bigger."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EoehZhE1fa8T"
+      },
+      "source": [
+        "Good solution is to keep track of values that have already been computed by\n",
+        "storing them in a dictionary. A previously computed value that is stored for\n",
+        "later use is called a hint. Here is an implementation of fibonacci using hints"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "72cdlQuxfiX3"
+      },
+      "source": [
+        "#Hints"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "45sHUOsKZZFe",
+        "outputId": "61f982a5-0c21-46e4-b717-8f09616cb679",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        }
+      },
+      "source": [
+        "previous={0:0, 1:1}\n",
+        "def fibonacci(n):\n",
+        "    if n not in previous:\n",
+        "        val=fibonacci(n-1)+fibonacci(n-2)\n",
+        "        previous[n]=val\n",
+        "    return previous[n]\n",
+        "n=int(input(\"Enter the value of n:\"))\n",
+        "print(\"Fibonacci(\", n,\")= \", fibonacci(n))"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter the value of n:40\n",
+            "Fibonacci( 40 )=  102334155\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "f_TZ8Ni6fo1A"
+      },
+      "source": [
+        "The dictionary named previous keeps track of the Fibonacci numbers we already\n",
+        "know. We start with only two pairs: 0 maps to 1; and 1 maps to 1.\n",
+        "Whenever fibonacci is called, it checks the dictionary to determine if it contains\n",
+        "the result. If it's there, the function can return immediately without\n",
+        "making any more recursive calls. If not, it has to compute the new value. The\n",
+        "new value is added to the dictionary before the function returns."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "c4AM4fzPX824"
