--- a/CST 283 Python for Machine Learning/Module 2/Working_with_recursion,_Lambda_functions.ipynb
+++ b/CST 283 Python for Machine Learning/Module 2/Working_with_recursion,_Lambda_functions.ipynb
@@ -1015,9 +1015,522 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HIUAUvGcMKoO"
+      },
+      "source": [
+        "#Mapping"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xKN3G7nyMQFa"
+      },
+      "source": [
+        "This process applies a function to each value in a sequence (such as a list, a\n",
+        "tuple, or a string) and returns a new sequence of the results."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "pBGtxTn9KTDQ"
+      },
+      "source": [
+        "words = [\"231\",\"20\",\"-45\",\"99\"]"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XjaDKhZ_P3kL",
+        "outputId": "c3bbc822-9111-464d-c4e9-308a4fa10850",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "type(words[0])"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OJLAjuY3PszA"
+      },
+      "source": [
+        "words=list(map(int,words))"
+      ],
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WbPKOo_PPuWc",
+        "outputId": "5262b074-b949-4c98-fb7f-74ac90c993d0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "words"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[231, 20, -45, 99]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kNS4VJs3P67T",
+        "outputId": "f6ca59e9-55b9-45bf-ab53-0110e3c47435",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "type(words[0])"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zGZ17WD8QHzc"
+      },
+      "source": [
+        "#Filtering"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zmfV5g9tQTDx"
+      },
+      "source": [
+        "Function called a predicate is applied to each value in a list. If the predicate\n",
+        "returns True, the value passes the test and is added to a filter object (similar to a\n",
+        "map object). Otherwise, the value is dropped from consideration."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RKZxq_UGQiFr"
+      },
+      "source": [
+        "mylist=[1,2,3,4,5,6,7,8,9]"
+      ],
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "t2uJVSC_P1GE"
+      },
+      "source": [
+        "def odd(n):\n",
+        "  return n%2 ==0"
+      ],
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3GopY_eTQauj"
+      },
+      "source": [
+        "result=list(filter(odd,mylist))"
+      ],
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vwo861hcQnQE",
+        "outputId": "3eb6f339-eb7b-48c6-cdb8-a896a42a4e20",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "result"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[2, 4, 6, 8]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "A1YcdxYNRt40"
+      },
+      "source": [
+        "#Reducing"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mt5GAKzzRyQU"
+      },
+      "source": [
+        "Take a list of values and repeatedly apply a function to accumulate a single data value."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "j6_X87eqRkWN"
+      },
+      "source": [
+        "from functools import reduce"
+      ],
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9c4VoFqLR6Bz"
+      },
+      "source": [
+        "def add(x,y):\n",
+        "  return x+y"
+      ],
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JWsW-p5nR-dA",
+        "outputId": "f2da3f74-689f-4518-96df-2b43b8c91aa1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "reduce(add,result)"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "20"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jSNiPwdJTd7J",
+        "outputId": "c4b706d0-12a4-4261-81be-a83a0f4ec716",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "reduce(add,list(filter(odd,mylist)))"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "20"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VFkbOKCuTwbU"
+      },
+      "source": [
+        "#Using lambda to Create Anonymous Functions"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ofLwSc02T2yK"
+      },
+      "source": [
+        "Python includes a mechanism called lambda that allows the programmer to create functions in this manner.\n",
+        "A lambda is an anonymous function.\n",
+        "It has no name of its own, but contains the names of its arguments as well as a single expression. \n",
+        "When the lambda is applied to its arguments, its expression is evaluated, and its value is returned.\n",
+        "All of the code must appear on one line and\n",
+        "The syntax of a lambda is very tight and restrictive:\n",
+        "lambda<argname-1,...,argname-n>:<expression>\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "062pJBeLUkfo",
+        "outputId": "8ec8bb57-d660-478e-c793-599f838b6a7b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "add5 = lambda x: x + 5\n",
+        "print(add5(7))"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "12\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XAUi7rtzUt4U",
+        "outputId": "0d8c9627-6063-4117-c5d6-649952c21c1c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "square = lambda x: x * x\n",
+        "print(square(8))"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "64\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "urT_0wJNTw4C",
+        "outputId": "b9e691b5-da28-4d51-f6fe-712f0ec1c921",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "data =[1,2,3,4]\n",
+        "reduce(lambda x,y: x+y,data)"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UrxcQ1QqU1pe",
+        "outputId": "3448f824-d3aa-4987-f5b3-256c3ed639bf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "list1 = [1, 2, 3, 4, 5, 6]\n",
+        "list2 = list(filter(lambda x: x%2 == 0, list1))\n",
+        "print(list2)"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[2, 4, 6]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "o8w3iW_MU2WH",
+        "outputId": "d40afc56-f756-4217-f742-fce226953faa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "\n",
+        "odds = lambda x: x%2 == 1\n",
+        "list1 = [1, 2, 3, 4, 5, 6]\n",
+        "list2 = list(filter(odds, list1))\n",
+        "print(list2)"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 3, 5]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KobiopmzU49X",
+        "outputId": "a72f91ce-f359-450a-9ac4-a7100eb34c09",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "\n",
+        "list1 = [1, 2, 3, 4, 5, 6]\n",
+        "list2 = list(map(lambda x: x ** 2, list1))\n",
+        "print(list2)"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 4, 9, 16, 25, 36]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5Hw3upugU8W5",
+        "outputId": "1d3f487c-9ce0-4c0d-e247-11e2739f9498",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import datetime\n",
+        "\n",
+        "now = datetime.datetime.now()\n",
+        "print(now)\n",
+        "year = lambda x: x.year\n",
+        "print(year(now))"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2020-10-07 18:30:33.897785\n",
+            "2020\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1BpWRgOCVAup"
       },
       "source": [
         ""
